neo/cnvrhi/cnvrhi.h

void c_cpp_string_set(void* string_ptr, const char* value);
const char* c_cpp_string_get(const void* string_ptr);
const nvrhi::TextureDesc* c_nvrhi_texture_getDesc(const nvrhi::ITexture* texture);
const nvrhi::SamplerDesc* c_nvrhi_sampler_getDesc(const nvrhi::ISampler* sampler);
const nvrhi::BindingSetDesc* c_nvrhi_bindingSet_getDesc(const nvrhi::IBindingSet* set);
const nvrhi::FramebufferInfoEx* c_nvrhi_framebuffer_getFramebufferInfo(
		const nvrhi::IFramebuffer* framebuffer);
const nvrhi::FramebufferDesc* c_nvrhi_framebuffer_getDesc(
		const nvrhi::IFramebuffer* framebuffer);
const nvrhi::FormatInfo* c_nvrhi_getFormatInfo(nvrhi::Format);