neo/ztech/renderer/nvrhi.zig


pub const Format = enum(u8) {
    UNKNOWN,
    R8_UINT,
    R8_SINT,
    R8_UNORM,
    R8_SNORM,
    RG8_UINT,
    RG8_SINT,
    RG8_UNORM,
    RG8_SNORM,
    R16_UINT,
    R16_SINT,
    R16_UNORM,
    R16_SNORM,
    R16_FLOAT,
    BGRA4_UNORM,
    B5G6R5_UNORM,
    B5G5R5A1_UNORM,
    RGBA8_UINT,
    RGBA8_SINT,
    RGBA8_UNORM,
    RGBA8_SNORM,
    BGRA8_UNORM,
    SRGBA8_UNORM,
    SBGRA8_UNORM,
    R10G10B10A2_UNORM,
    R11G11B10_FLOAT,
    RG16_UINT,
    RG16_SINT,
    RG16_UNORM,
    RG16_SNORM,
    RG16_FLOAT,
    R32_UINT,
    R32_SINT,
    R32_FLOAT,
    RGBA16_UINT,
    RGBA16_SINT,
    RGBA16_FLOAT,
    RGBA16_UNORM,
    RGBA16_SNORM,
    RG32_UINT,
    RG32_SINT,
    RG32_FLOAT,
    RGB32_UINT,
    RGB32_SINT,
    RGB32_FLOAT,
    RGBA32_UINT,
    RGBA32_SINT,
    RGBA32_FLOAT,
    D16,
    D24S8,
    X24G8_UINT,
    D32,
    D32S8,
    X32G8_UINT,
    BC1_UNORM,
    BC1_UNORM_SRGB,
    BC2_UNORM,
    BC2_UNORM_SRGB,
    BC3_UNORM,
    BC3_UNORM_SRGB,
    BC4_UNORM,
    BC4_SNORM,
    BC5_UNORM,
    BC5_SNORM,
    BC6H_UFLOAT,
    BC6H_SFLOAT,
    BC7_UNORM,
    BC7_UNORM_SRGB,
    COUNT,
};

pub const FormatKind = enum(u8) {
    Integer,
    Normalized,
    Float,
    DepthStencil,
};

pub const FormatInfo = extern struct {
    format: Format,
    name: [*:0]const u8,
    bytesPerBlock: u8,
    blockSize: u8,
    kind: FormatKind,
    hasRed: bool,
    hasGreen: bool,
    hasBlue: bool,
    hasAlpha: bool,
    hasDepth: bool,
    hasStencil: bool,
    isSigned: bool,
    isSRGB: bool,
};

extern fn c_nvrhi_getFormatInfo(Format) *const FormatInfo;
pub fn getFormatInfo(format: Format) FormatInfo {
    return c_nvrhi_getFormatInfo(format).*;
}

const CppString = [24]u8;

extern fn c_cpp_string_set(*anyopaque, [*:0]const u8) void;
pub fn cppString_set(ptr: *CppString, value: [:0]const u8) void {
    c_cpp_string_set(@ptrCast(ptr), value.ptr);
}

extern fn c_cpp_string_get(*const anyopaque) [*:0]const u8;
pub fn cppString_get(ptr: *const CppString) [:0]const u8 {
    return std.mem.span(c_cpp_string_get(@ptrCast(ptr)));
}

pub const VertexAttributeDesc = extern struct {
    name: CppString = std.mem.zeroes(CppString),
    format: Format = .UNKNOWN,
    arraySize: u32 = 1,
    bufferIndex: u32 = 0,
    offset: u32 = 0,
    elementStride: u32 = 0,
    isInstanced: bool = false,

    pub fn setName(desc: *VertexAttributeDesc, name: [:0]const u8) void {
        cppString_set(&desc.name, name);
    }

    pub fn getName(desc: *const VertexAttributeDesc) [:0]const u8 {
        return cppString_get(&desc.name);
    }
};

pub const ResourceType = enum(u8) {
    None,
    Texture_SRV,
    Texture_UAV,
    TypedBuffer_SRV,
    TypedBuffer_UAV,
    StructuredBuffer_SRV,
    StructuredBuffer_UAV,
    RawBuffer_SRV,
    RawBuffer_UAV,
    ConstantBuffer,
    VolatileConstantBuffer,
    Sampler,
    RayTracingAccelStruct,
    PushConstants,
    Count,
};

pub const BindingLayoutItem = extern struct {
    slot: u32,
    type: ResourceType,
    unused: u8 = 0,
    size: u16 = 0,

    comptime {
        std.debug.assert(@sizeOf(BindingLayoutItem) == 8);
    }
};

pub const BindingLayoutItemArray = static_vector(BindingLayoutItem, c_MaxBindingsPerLayout);

pub const VulkanBindingOffsets = extern struct {
    shaderResource: u32 = 0,
    sampler: u32 = 128,
    constantBuffer: u32 = 256,
    unorderedAccess: u32 = 384,
};

pub const ShaderType = enum(u16) {
    None = 0x0000,
    Compute = 0x0020,
    Vertex = 0x0001,
    Hull = 0x0002,
    Domain = 0x0004,
    Geometry = 0x0008,
    Pixel = 0x0010,
    Amplification = 0x0040,
    Mesh = 0x0080,
    AllGraphics = 0x00FE,
    RayGeneration = 0x0100,
    AnyHit = 0x0200,
    ClosestHit = 0x0400,
    Miss = 0x0800,
    Intersection = 0x1000,
    Callable = 0x2000,
    AllRayTracing = 0x3F00,
    All = 0x3FFF,
};

pub const CustomSemantic = extern struct {
    const Type = enum(c_int) {
        Undefined = 0,
        XRight = 1,
        ViewportMask = 2,
    };

    type: Type,
    name: CppString,
};

pub const FastGeometryShaderFlags = enum(u8) {
    ForceFastGS = 0x01,
    UseViewportMask = 0x02,
    OffsetTargetIndexByViewportIndex = 0x04,
    StrictApiOrder = 0x08,
};

pub const ShaderDesc = extern struct {
    shaderType: ShaderType = .None,
    debugName: [*:0]const u8 = "",
    entryName: [*:0]const u8 = "main",
    hlslExtensionsUAV: c_int = -1,
    useSpecificShaderExt: bool = false,
    numCustomSemantics: u32 = 0,
    pCustomSemantics: ?*CustomSemantic = null,
    fastGSFlags: @typeInfo(FastGeometryShaderFlags).Enum.tag_type = 0,
    pCoordinateSwizzling: ?*u32 = null,
};

pub const BlendFactor = enum(u8) {
    Zero = 1,
    One = 2,
    SrcColor = 3,
    InvSrcColor = 4,
    SrcAlpha = 5,
    InvSrcAlpha = 6,
    DstAlpha = 7,
    InvDstAlpha = 8,
    DstColor = 9,
    InvDstColor = 10,
    SrcAlphaSaturate = 11,
    ConstantColor = 14,
    InvConstantColor = 15,
    Src1Color = 16,
    InvSrc1Color = 17,
    Src1Alpha = 18,
    InvSrc1Alpha = 19,

    pub const OneMinusSrcColor = BlendFactor.InvSrcColor;
    pub const OneMinusSrcAlpha = BlendFactor.InvSrcAlpha;
    pub const OneMinusDstAlpha = BlendFactor.InvDstAlpha;
    pub const OneMinusDstColor = BlendFactor.InvDstColor;
    pub const OneMinusConstantColor = BlendFactor.InvConstantColor;
    pub const OneMinusSrc1Color = BlendFactor.InvSrc1Color;
    pub const OneMinusSrc1Alpha = BlendFactor.InvSrc1Alpha;
};

pub const BlendOp = enum(u8) {
    Add = 1,
    Subrtact = 2,
    ReverseSubtract = 3,
    Min = 4,
    Max = 5,
};

pub const ColorMask = enum(u8) {
    Red = 1,
    Green = 2,
    Blue = 4,
    Alpha = 8,
    All = 0xF,
};

pub const BlendState = extern struct {
    pub const RenderTarget = extern struct {
        blendEnable: bool = false,
        srcBlend: BlendFactor = .One,
        destBlend: BlendFactor = .Zero,
        blendOp: BlendOp = .Add,
        srcBlendAlpha: BlendFactor = .One,
        destBlendAlpha: BlendFactor = .Zero,
        blendOpAlpha: BlendOp = .Add,
        colorWriteMask: ColorMask = .All,
    };

    targets: [c_MaxRenderTargets]RenderTarget = [_]RenderTarget{.{}} ** c_MaxRenderTargets,
    alphaToCoverageEnable: bool = false,
};

pub const BindingLayoutDesc = extern struct {
    visibility: ShaderType = .None,
    registerSpace: u32 = 0,
    registerSpaceIsDescriptorSet: bool = false,
    bindings: BindingLayoutItemArray = .{},
    bindingOffsets: VulkanBindingOffsets = .{},
};

pub const ObjectType = u32;

pub const ObjectTypes = struct {
    pub const SharedHandle: ObjectType = 0x00000001;

    pub const D3D11_Device: ObjectType = 0x00010001;
    pub const D3D11_DeviceContext: ObjectType = 0x00010002;
    pub const D3D11_Resource: ObjectType = 0x00010003;
    pub const D3D11_Buffer: ObjectType = 0x00010004;
    pub const D3D11_RenderTargetView: ObjectType = 0x00010005;
    pub const D3D11_DepthStencilView: ObjectType = 0x00010006;
    pub const D3D11_ShaderResourceView: ObjectType = 0x00010007;
    pub const D3D11_UnorderedAccessView: ObjectType = 0x00010008;

    pub const D3D12_Device: ObjectType = 0x00020001;
    pub const D3D12_CommandQueue: ObjectType = 0x00020002;
    pub const D3D12_GraphicsCommandList: ObjectType = 0x00020003;
    pub const D3D12_Resource: ObjectType = 0x00020004;
    pub const D3D12_RenderTargetViewDescriptor: ObjectType = 0x00020005;
    pub const D3D12_DepthStencilViewDescriptor: ObjectType = 0x00020006;
    pub const D3D12_ShaderResourceViewGpuDescripror: ObjectType = 0x00020007;
    pub const D3D12_UnorderedAccessViewGpuDescripror: ObjectType = 0x00020008;
    pub const D3D12_RootSignature: ObjectType = 0x00020009;
    pub const D3D12_PipelineState: ObjectType = 0x0002000a;
    pub const D3D12_CommandAllocator: ObjectType = 0x0002000b;

    pub const VK_Device: ObjectType = 0x00030001;
    pub const VK_PhysicalDevice: ObjectType = 0x00030002;
    pub const VK_Instance: ObjectType = 0x00030003;
    pub const VK_Queue: ObjectType = 0x00030004;
    pub const VK_CommandBuffer: ObjectType = 0x00030005;
    pub const VK_DeviceMemory: ObjectType = 0x00030006;
    pub const VK_Buffer: ObjectType = 0x00030007;
    pub const VK_Image: ObjectType = 0x00030008;
    pub const VK_ImageView: ObjectType = 0x00030009;
    pub const VK_AccelerationStructureKHR: ObjectType = 0x0003000a;
    pub const VK_Sampler: ObjectType = 0x0003000b;
    pub const VK_ShaderModule: ObjectType = 0x0003000c;
    pub const VK_RenderPass: ObjectType = 0x0003000d;
    pub const VK_Framebuffer: ObjectType = 0x0003000e;
    pub const VK_DescriptorPool: ObjectType = 0x0003000f;
    pub const VK_DescriptorSetLayout: ObjectType = 0x00030010;
    pub const VK_DescriptorSet: ObjectType = 0x00030011;
    pub const VK_PipelineLayout: ObjectType = 0x00030012;
    pub const VK_Pipeline: ObjectType = 0x00030013;
    pub const VK_Micromap: ObjectType = 0x00030014;
};

pub const Object = extern struct {
    u: extern union {
        integer: u64,
        pointer: ?*anyopaque,
    },
};

pub const InputLayoutHandle = RefCountPtr(IInputLayout);
pub const ShaderHandle = RefCountPtr(IShader);
pub const DeviceHandle = RefCountPtr(IDevice);
pub const TextureHandle = RefCountPtr(ITexture);
pub const SamplerHandle = RefCountPtr(ISampler);
pub const FramebufferHandle = RefCountPtr(IFramebuffer);
pub const EventQueryHandle = RefCountPtr(IEventQuery);

pub const IEventQuery = opaque {};

pub const ITexture = opaque {
    extern fn c_nvrhi_texture_getDesc(*const ITexture) *const TextureDesc;

    pub fn getDesc(texture: *const ITexture) *const TextureDesc {
        return c_nvrhi_texture_getDesc(texture);
    }
};

pub const ISampler = opaque {
    extern fn c_nvrhi_sampler_getDesc(*const ISampler) *const SamplerDesc;

    pub fn getDesc(sampler: *const ISampler) *const SamplerDesc {
        return c_nvrhi_sampler_getDesc(sampler);
    }
};

pub const IShader = opaque {};

pub const FramebufferInfo = extern struct {
    colorFormats: static_vector(Format, c_MaxRenderTargets) = .{},
    depthFormat: Format = .UNKNOWN,
    sampleCount: u32 = 1,
    sampleQuality: u32 = 0,
};

pub const FramebufferInfoEx = extern struct {
    framebuffer_info: FramebufferInfo,
    width: u32 = 0,
    height: u32 = 0,
};

pub const IFramebuffer = opaque {
    extern fn c_nvrhi_framebuffer_getFramebufferInfo(*const IFramebuffer) *const FramebufferInfoEx;
    extern fn c_nvrhi_framebuffer_getDesc(*const IFramebuffer) *const FramebufferDesc;

    pub fn getFramebufferInfo(framebuffer: *const IFramebuffer) *const FramebufferInfoEx {
        return c_nvrhi_framebuffer_getFramebufferInfo(framebuffer);
    }

    pub fn getDesc(framebuffer: *const IFramebuffer) *const FramebufferDesc {
        return c_nvrhi_framebuffer_getDesc(framebuffer);
    }
};

pub const IInputLayout = opaque {};

pub const IBindingSet = opaque {
    extern fn c_nvrhi_bindingSet_getDesc(*const IBindingSet) *const BindingSetDesc;

    pub fn getDesc(binding_set: *const IBindingSet) *const BindingSetDesc {
        return c_nvrhi_bindingSet_getDesc(binding_set);
    }
};

pub const PrimitiveType = enum(u8) {
    PointList,
    LineList,
    TriangleList,
    TriangleStrip,
    TriangleFan,
    TriangleListWithAdjacency,
    TriangleStripWithAdjacency,
    PatchList,
};

pub const StencilOp = enum(u8) {
    Keep = 1,
    Zero = 2,
    Replace = 3,
    IncrementAndClamp = 4,
    DecrementAndClamp = 5,
    Invert = 6,
    IncrementAndWrap = 7,
    DecrementAndWrap = 8,
};

pub const ComparisonFunc = enum(u8) {
    Never = 1,
    Less = 2,
    Equal = 3,
    LessOrEqual = 4,
    Greater = 5,
    NotEqual = 6,
    GreaterOrEqual = 7,
    Always = 8,
};

pub const DepthStencilState = extern struct {
    pub const StencilOpDesc = extern struct {
        failOp: StencilOp = .Keep,
        depthFailOp: StencilOp = .Keep,
        passOp: StencilOp = .Keep,
        stencilFunc: ComparisonFunc = .Always,
    };
